fixed addthis overlap

--- a/css/style.scss
+++ b/css/style.scss
@@ -862,3 +862,8 @@ ul {
 		}
 	}
 }
+
+#at4-share, #at4-soc {
+    top: 40%!important;
+    bottom: auto;
+}
